feat add : eurika configs